<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgofdefault"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@color/colorIconBlue">
        <LinearLayout
            android:id="@+id/btn_back"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:onClick="setting">

            <Button
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:background="@drawable/back_white"
                android:paddingLeft="10dp"
                android:textColor="#ffffff"
                android:textSize="16sp"/>
        </LinearLayout>
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/register"
            android:gravity="center"
            android:textSize="@dimen/lTextSize"
            android:textColor="@color/white"
            android:textStyle="bold"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/background_login_div">
        <EditText
            android:id="@+id/phone"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:paddingTop="10dp"
            android:paddingLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:hint="@string/phone"
            android:textColorHint="@color/darkGrey"
            android:maxLines="1"
            android:inputType="phone"
            android:maxLength="11"
            />
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/darkGrey"/>
        <EditText
            android:id="@+id/set_password"
            android:maxLines="1"
            android:inputType="textPassword"
            android:maxLength="16"
            android:digits="0123456789qwertyuioplkjhgfdsazxcvbnm"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:hint="@string/input_password"
            android:textColorHint="@color/darkGrey"/>
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/darkGrey"/>

        <EditText
            android:id="@+id/confirm_password"
            android:maxLines="1"
            android:inputType="textPassword"
            android:maxLength="16"
            android:digits="0123456789qwertyuioplkjhgfdsazxcvbnm"
            android:layout_marginTop="15dp"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:hint="@string/confirm_password"
            android:textColorHint="@color/darkGrey"/>

        <TextView
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/darkGrey"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/checkCode"
                android:maxLines="1"
                android:maxLength="4"
                android:digits="0123456789"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:hint="@string/check_code"
                android:textColorHint="@color/darkGrey"/>
            <TextView
                android:layout_margin="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/darkGrey"/>
            <TextView
                android:id="@+id/getCheckCode"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/get_check_code"
                android:textColor="@color/colorIconBlue"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/nextStep"
        android:onClick="goNextStep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next_step"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/corner_rec_bg_blue_press"
        android:textColor="@color/white"/>
</LinearLayout>